--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "url": "https://github.com/gatsbyjs/gatsby/issues"
   },
   "dependencies": {
+    "@loadable/component": "^5.14.1",
     "@styled-icons/fa-solid": "^10.26.0",
     "algoliasearch": "^4.8.6",
     "gatsby": "^3.0.1",
